--- a/openam/openam-authentication/pom.xml
+++ b/openam/openam-authentication/pom.xml
@@ -35,8 +35,7 @@
 
     <!-- Component Definition -->
     <name>OpenAM Authentication</name>
-    <description>OpenAM Authentication Components
-    </description>
+    <description>OpenAM Authentication Modules</description>
     <artifactId>openam-authentication</artifactId>
     <packaging>pom</packaging>
 
@@ -59,7 +58,6 @@
         <module>openam-auth-oath</module>
         <module>openam-auth-oauth2</module>
         <module>openam-auth-radius</module>
-        <module>openam-auth-safeword</module>
         <module>openam-auth-securid</module>
         <module>openam-auth-windowsdesktopsso</module>
         <module>openam-auth-persistentcookie</module>
@@ -69,13 +67,8 @@
     <dependencies>
         <dependency>
             <groupId>org.forgerock.openam</groupId>
-            <artifactId>openam-shared</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.forgerock.openam</groupId>
             <artifactId>openam-core</artifactId>
         </dependency>
     </dependencies>
-
 </project>
 
