--- a/openam/openam-schema/openam-diagnostics-schema/pom.xml
+++ b/openam/openam-schema/openam-diagnostics-schema/pom.xml
@@ -46,7 +46,6 @@
             <!--<plugin>
                  <groupId>org.codehaus.mojo</groupId>
                  <artifactId>jaxb2-maven-plugin</artifactId>
-                 <version>1.3.1</version>
                  <executions>
                      <execution>
                          <id>xjc-saml2</id>
@@ -65,7 +64,6 @@
                      </schemaFiles>
                 </configuration>
             </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -77,10 +75,10 @@
                             <classpathPrefix>lib/</classpathPrefix>
                         </manifest>
                         <manifestEntries>
-                            <Specification-Title>OpenAM Schemata</Specification-Title>
+                            <Specification-Title>OpenAM Diagnostics Schema</Specification-Title>
                             <Specification-Version>${project.version} - ${maven.build.timestamp}</Specification-Version>
                             <Specification-Vendor>ForgeRock</Specification-Vendor>
-                            <Implementation-Title>OpenAM Schemata</Implementation-Title>
+                            <Implementation-Title>OpenAM Diagnostics Schema</Implementation-Title>
                             <Implementation-Version>${project.version} - ${maven.build.timestamp}</Implementation-Version>
                             <Implementation-Vendor>ForgeRock</Implementation-Vendor>
                             <Built-By>${user.name}</Built-By>
@@ -95,36 +93,13 @@
                     </archive>
                 </configuration>
             </plugin>
-
         </plugins>
-    
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-                <excludes>
-                    <exclude>version_information.txt</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>true</filtering>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>version_information.txt</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
-
     
     <dependencies>
         <dependency>
             <groupId>org.forgerock.openam</groupId>
             <artifactId>openam-shared</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
