--- a/openam/openam-schema/openam-xacml3-schema/pom.xml
+++ b/openam/openam-schema/openam-xacml3-schema/pom.xml
@@ -35,8 +35,7 @@
 
     <!-- Component Definition -->
     <name>OpenAM XACML3 Schema</name>
-    <description>OpenAM XACML3 Schemata
-    </description>
+    <description>OpenAM XACML3 Schemata</description>
     <artifactId>openam-xacml3-schema</artifactId>
     <packaging>jar</packaging>
 
@@ -52,7 +51,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>jaxb2-maven-plugin</artifactId>
-                        <version>1.3.1</version>
                         <executions>
                             <execution>
                                 <id>xjc-xacml</id>
@@ -87,20 +85,6 @@
     <!-- Build -->
     <build>
         <plugins>
-            <!-- Surefire Tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <templateLoaderPath>${notification.template.path}</templateLoaderPath>
-                    </systemPropertyVariables>
-                    <excludes>
-                        <exclude>**/IT_*</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -112,10 +96,10 @@
                             <classpathPrefix>lib/</classpathPrefix>
                         </manifest>
                         <manifestEntries>
-                            <Specification-Title>OpenAM Schemata</Specification-Title>
+                            <Specification-Title>OpenAM XACML3 Schema</Specification-Title>
                             <Specification-Version>${project.version} - ${maven.build.timestamp}</Specification-Version>
                             <Specification-Vendor>ForgeRock</Specification-Vendor>
-                            <Implementation-Title>OpenAM Schemata</Implementation-Title>
+                            <Implementation-Title>OpenAM XACML3 Schema</Implementation-Title>
                             <Implementation-Version>${project.version} - ${maven.build.timestamp}</Implementation-Version>
                             <Implementation-Vendor>ForgeRock</Implementation-Vendor>
                             <Built-By>${user.name}</Built-By>
@@ -129,37 +113,13 @@
                     </archive>
                 </configuration>
             </plugin>
-
         </plugins>
-
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-                <excludes>
-                    <exclude>version_information.txt</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>true</filtering>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>version_information.txt</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
 
     <dependencies>
-
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-libs</artifactId>
         </dependency>
-
     </dependencies>
-
 </project>
