--- a/openam/openam-test/pom.xml
+++ b/openam/openam-test/pom.xml
@@ -35,40 +35,13 @@
 
     <!-- Component Definition -->
     <name>OpenAM Common Test Suite</name>
-    <description>OpenAM Common TEST Suite
-    </description>
+    <description>OpenAM Common TEST Suite</description>
     <artifactId>openam-test</artifactId>
     <packaging>jar</packaging>
 
     <!-- Build -->
     <build>
         <plugins>
-
-            <plugin>
-                <inherited>true</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.source.version}</source>
-                    <target>${java.target.version}</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-
-            <!-- Surefire Tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <templateLoaderPath>${notification.template.path}</templateLoaderPath>
-                    </systemPropertyVariables>
-                    <excludes>
-                        <exclude>**/IT_*</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -91,17 +64,6 @@
                 </configuration>
             </plugin>
         </plugins>
-
-        <testResources>
-            <testResource>
-                <filtering>false</filtering>
-                <directory>src/test/resources</directory>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-            </testResource>
-        </testResources>
-
     </build>
 
     <dependencies>
@@ -113,7 +75,6 @@
         <dependency>
             <groupId>org.forgerock.openam</groupId>
             <artifactId>openam-cli-impl</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -124,9 +85,6 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <scope>test</scope>
         </dependency>
-
     </dependencies>
-
 </project>
