Separating out configurator and upgrade tool from openam-core
git-svn-id: https://svn.forgerock.org/openam/branches/AME-2372@6229 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/pom.xml
+++ b/openam/pom.xml
@@ -775,7 +775,12 @@
             </dependency>
             <dependency>
                 <groupId>org.forgerock.openam</groupId>
-                <artifactId>openam-distribution-amadmsetup</artifactId>
+                <artifactId>openam-configurator-tool</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.forgerock.openam</groupId>
+                <artifactId>openam-upgrade-tool</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
