--- a/openam/openam-federation/OpenFM/pom.xml
+++ b/openam/openam-federation/OpenFM/pom.xml
@@ -47,73 +47,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>zip-pre-packaging</id>
-                        <phase>compile</phase>
-                        <configuration>
-                            <target>
-                                <tstamp>
-                                    <format property="war.time.stamp" pattern="yyyy-MMMM-dd HH:mm" locale="en,UK" />
-                                </tstamp>
-                                <property name="version.set" value="${project.version}" />
-
-                                <filter token="DATESTAMP" value="${war.time.stamp}" />
-                                <filter token="VERSION" value="${version.set}" />
-
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset
-                                        dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/">
-                                        <include name="deployablewar.properties" />
-                                    </fileset>
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/">
-                                        <include name="deployablewar.properties" />
-                                    </fileset>
-                                    <globmapper from="*.properties" to="*_en_US.properties" />
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/de_DE">
-                                        <include name="deployablewar_de.properties" />
-                                    </fileset>
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/es_ES">
-                                        <include name="deployablewar_es.properties" />
-                                    </fileset>
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/fr_FR">
-                                        <include name="deployablewar_fr.properties" />
-                                    </fileset>
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/ja_JP">
-                                        <include name="deployablewar_ja.properties" />
-                                    </fileset>
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/ko_KR">
-                                        <include name="deployablewar_ko.properties" />
-                                    </fileset>
-                                </copy>
-                                <copy todir="${project.build.directory}/classes" filtering="true">
-                                    <fileset dir="${project.basedir}/../../openam-locale/src/main/resources/openfm-locale/zh_TW">
-                                        <include name="deployablewar_zh_TW.properties" />
-                                    </fileset>
-                                </copy>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -127,8 +60,7 @@
                             <Specification-Version>${project.version} - ${maven.build.timestamp}</Specification-Version>
                             <Specification-Vendor>ForgeRock</Specification-Vendor>
                             <Implementation-Title>OpenAM Federation</Implementation-Title>
-                            <Implementation-Version>${project.version} - ${maven.build.timestamp}
-                            </Implementation-Version>
+                            <Implementation-Version>${project.version} - ${maven.build.timestamp}</Implementation-Version>
                             <Implementation-Vendor>ForgeRock</Implementation-Vendor>
                             <Built-By>${user.name}</Built-By>
                             <Build-Jdk>${java.version}</Build-Jdk>
@@ -142,14 +74,43 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.github.goldin</groupId>
+                <artifactId>copy-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <verbose>false</verbose>
+                    <resource>
+                        <directory>${basedir}/src/main/resources</directory>
+                        <include>*_*/*</include>
+                        <filtering>true</filtering>
+                        <targetPath>${project.build.outputDirectory}</targetPath>
+                    </resource>
+                </configuration>
+            </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <excludes>
+                    <exclude>*_*/*</exclude>
+                </excludes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>org.forgerock.openam</groupId>
-            <artifactId>openam-locale</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.forgerock.openam</groupId>
             <artifactId>openam-core</artifactId>
@@ -169,8 +130,6 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
         </dependency>
-
     </dependencies>
-
 </project>
 
