Removed openam-oauth2-rest from the poms since it appears not to be needed anymore for openam-core-only.
git-svn-id: https://svn.forgerock.org/openam/branches/openam-6425@6473 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-server-only/pom.xml
+++ b/openam/openam-server-only/pom.xml
@@ -571,10 +571,10 @@
             <artifactId>openam-oauth2-common</artifactId>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.forgerock.openam</groupId>
             <artifactId>openam-oauth2-rest</artifactId>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.freemarker</groupId>
