Updating schema names with the TokenType schema.
git-svn-id: https://svn.forgerock.org/openam/branches/OPENAM-3442-CTS-TokenType@7941 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-server-only/src/main/resources/config/schemaNames.properties
+++ b/openam/openam-server-only/src/main/resources/config/schemaNames.properties
@@ -54,7 +54,7 @@ tivoliUserSchema=/WEB-INF/template/ldif/tivoli/tivoli_user_schema.ldif /WEB-INF/
 opendsSmsSchema=/WEB-INF/template/ldif/opendj/opendj_config_schema.ldif /WEB-INF/template/ldif/opendj/opendj_user_schema.ldif \
 /WEB-INF/template/ldif/opendj/opendj_embinit.ldif /WEB-INF/template/ldif/opendj/opendj_user_index.ldif \
 /WEB-INF/template/ldif/opendj/opendj_plugin.ldif /WEB-INF/template/ldif/sfha/cts-container.ldif \
-/WEB-INF/template/ldif/sfha/cts-add-schema.ldif /WEB-INF/template/ldif/sfha/cts-indices.ldif \
+/WEB-INF/template/ldif/sfha/cts-add-schema.ldif /WEB-INF/template/ldif/sfha/cts-indices.ldif /WEB-INF/template/ldif/sfha/cts-indices-12.ldif \
 /WEB-INF/template/ldif/opendj/opendj_dashboard.ldif /WEB-INF/template/ldif/opendj/opendj_deviceprint.ldif
 
 ##  OpenDJ User Management Schema.
