removing profile url per discussions, and updating relevant interfaces. Also exposing connect and timeout values in the HttpURLConnectionManager.
git-svn-id: https://svn.forgerock.org/openam/branches/oidc_authn@8557 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
+++ b/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
@@ -1,16 +1,17 @@
 openidconnect-service-description=OpenID Connect ID Token Authentication
 header_name=Name of header referencing the ID Token
-issuer_name=Name of OpenID Connect ID Token Issuer (must match the iss field in issued jwks)
+issuer_name=Name of OpenID Connect ID Token Issuer
+issuer_name.help= Value must match the iss field in issued ID Token
 crypto_context_type=Configuration type: please select either 1.the issuer discovery url, 2. the issuer jwk url, or 3. the client_secret
 crypto_context_value=The discovery url, or jwk url, or the client_secret, corresponding to the selection above
-profile_service_url=The optional url of the profile service
-princial_mapper_class=Pricipal mapper class
-principal_mapper_class.help=Class which implements mapping of jwt state to a Princial in local identity repository
+princial_mapper_class=Principal mapper class
+principal_mapper_class.help=Class which implements mapping of jwt state to a Principal in the local identity repository
 principal_mapper_class.help.text=Any custom implementation must implement the org.forgerock.openam.authentication.modules.oidc.PrincipalMapper interface.
 local_to_jwt_attr_mappings=Mapping of local LDAP attributes to jwt attributes
 local_to_jwt_attr_mappings.help=Format: local_ldap_attribute=jwt_attribute
 local_to_jwt_attr_mappings.help.txt=Mappings allow jwt entries to drive principal lookup. This entry determines how to translate between \
-  local LDAP attributes and the entries in the jwt.
+  local LDAP attributes and the entries in the jwt. See http://openid.net/specs/openid-connect-core-1_0.html#ScopeClaims on how to request \
+  the inclusion of additional attributes in issued ID Tokens.
 verification_failed=Verification of the ID Token failed.
 issuer_mismatch=The issuer configured for the module, and the issuer string in discovery document referenced by configuration url, do not match.
 token_issuer_mismatch=The issuer configured for the module, and the issuer string in the jwt, do not match.
