minor cleanup, and some additional help in the properties bundle
git-svn-id: https://svn.forgerock.org/openam/branches/oidc_authn@8559 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
+++ b/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
@@ -4,6 +4,7 @@ issuer_name=Name of OpenID Connect ID Token Issuer
 issuer_name.help= Value must match the iss field in issued ID Token
 crypto_context_type=Configuration type: please select either 1.the issuer discovery url, 2. the issuer jwk url, or 3. the client_secret
 crypto_context_value=The discovery url, or jwk url, or the client_secret, corresponding to the selection above
+crypto_context_value.help=If discovery or jwk url entered, entry must be in valid url format
 princial_mapper_class=Principal mapper class
 principal_mapper_class.help=Class which implements mapping of jwt state to a Principal in the local identity repository
 principal_mapper_class.help.text=Any custom implementation must implement the org.forgerock.openam.authentication.modules.oidc.PrincipalMapper interface.
