added unit tests, and a bit of cleanup and more rigorous error handling in the oidc authN module
git-svn-id: https://svn.forgerock.org/openam/branches/oidc_authn@8565 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
+++ b/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
@@ -21,3 +21,4 @@ missing_header=No ID Token was found referenced by the specified header.
 jwk_not_loaded=The json web key state could not be loaded.
 principal_mapper_instantiation_error=The principal mapper could not be instantiated.
 principal_mapping_failure=No principal in the local id repo could be found.
+no_attributes_mapped=None of the attributes specified in the mappings could be found in the Id Token.
