ongoing work mapping RestSTSInstanceConfig state to sms.dtd-compliant xml file
git-svn-id: https://svn.forgerock.org/openam/branches/sts_restart_persistence@9025 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/restSTS.properties
+++ b/openam-core/src/main/resources/restSTS.properties
@@ -1,5 +1,5 @@
 am_deployment_url=The url corresponding to the OpenAM deployment
-issuer_name=The name of the issuer.\
+issuer_name=The name of the issuer.
 issuer_name.help=This name will appear in some issued tokens - e.g. in  the saml:Issuer of issued SAML2 assertions.
 deployment_realm=The realm in which the REST STS instance will be deployed.
 deployment_url_element=The final element in the url defining the REST STS endpoint
@@ -23,5 +23,32 @@ keystore_filename=The full path to the keystore, either on the classpath, or on 
 keystore_password=The password to the keystore specified above
 signature_key_alias=The alias identifying the private key entry used to sign issued tokens
 signature_key_password=The password corresponding to the signature key alias, if any
-encryption_key_alias=
-encryption_key_password=
+saml2_name_id_format=SAML2 name ID format
+saml2_name_id_format.help=The default value is urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified
+saml2_name_id_format.help.txt=See section 8.3 of http://docs.oasis-open.org/security/saml/v2.0/saml-core-2.0-os.pdf for \
+  details on possible values
+saml2_token_lifetime_seconds=SAML2 token lifetime
+saml2_token_lifetime_seconds.help=Set to over-ride the default of 600 (10 minutes).
+saml2_custom_conditions_provider_class_name=Class name of custom conditions provider (optional)
+saml2_custom_subject_provider_class_name=Class name of custom subject provider (optional)
+saml2_custom_authentication_statements_provider_class_name=Class name of custom authentication statements provider (optional)
+saml2_custom_authz_decision_statements_provider_class_name=Class name of custom authorization decision statements provider (optional)
+saml2_custom_attribute_mapper_class_name=Class name of custom attribute mapper (optional)
+saml2_custom_authn_context_mapper_class_name=Class name of custom attribute mapper (optional)
+saml2_canonicalization_algorithm=Canonicalization algorithm (optional)
+saml2_canonicalization_algorithm.help=http://www.w3.org/2001/10/xml-exc-c14n# is default
+saml2_signature_algorithm=Specify a custom signature algorithm (optional)
+saml2_signature_algorithm.help=If no custom algorithm is specified, either http://www.w3.org/2000/09/xmldsig#dsa-sha1 or \
+  http://www.w3.org/2000/09/xmldsig#rsa-sha1 is used, depending upon the type of the private key
+saml2_audiences=The audiences for Bearer assertions
+saml2_audiences.help=Must contain the Entity IDs of the SPs.
+saml2_audiences.help.txt=Values will be used to populate the Audiences of the AudienceRestriction element of the Conditions \
+  element. See section 4.1.4.2 of http://docs.oasis-open.org/security/saml/v2.0/saml-profiles-2.0-os.pdf for details.
+saml2_attribute_map=Specification of mapped attributes
+saml2_attribute_map.help.txt=Contains the mapping of saml attribute names (Map keys) to local OpenAM attributes (Map values) in \
+  various stores. The DefaultAttributeMapper looks at profile attributes in various places: \
+  LDAP or SQL, depending on data store setup, or in Session properties. The keys will define the name of the attributes \
+  included in the Assertion Attribute statements, and the data pulled from the subject's directory entry or session state \
+  corresponding to the map value will define the value corresponding to this attribute name. If the attribute value is \
+  enclosed in quotes, that quoted value will be included in the attribute without mapping. Binary attributes should be \
+  followed by ';'.
