Now creates and deletes to the SMS working. Also added STSPublishException.
git-svn-id: https://svn.forgerock.org/openam/branches/sts_restart_persistence@9248 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/restSTS.properties
+++ b/openam-core/src/main/resources/restSTS.properties
@@ -21,8 +21,10 @@ supported_token_transforms.help.txt=Example: for the transform USERNAME:SAML2, i
   this OPENAM session, as it was not created as part of the token transformation.
 keystore_filename=The full path to the keystore, either on the classpath, or on the filesystem.
 keystore_password=The password to the keystore specified above
-signature_key_alias=The alias identifying the private key entry used to sign issued tokens
-signature_key_password=The password corresponding to the signature key alias, if any
+keystore_signature_key_alias=The alias identifying the private key entry used to sign issued tokens
+keystore_signature_key_password=The password corresponding to the signature key alias, if any
+keystore_encryption_key_alias=Might not be necessary, and possibly only for the SOAP STS - TBD
+keystore_encryption_key_password=Might not be necessary, and possibly only for the SOAP STS - TBD
 saml2_name_id_format=SAML2 name ID format
 saml2_name_id_format.help=The default value is urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified
 saml2_name_id_format.help.txt=See section 8.3 of http://docs.oasis-open.org/security/saml/v2.0/saml-core-2.0-os.pdf for \
