final set of changes moving to custom CREST RequestHandler. Also changes to web.xml to expose rest sts functionality at different urls.
git-svn-id: https://svn.forgerock.org/openam/branches/sts_restart_persistence@9397 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-server-only/src/main/webapp/WEB-INF/web.xml
+++ b/openam-server-only/src/main/webapp/WEB-INF/web.xml
@@ -1086,15 +1086,15 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>rest-sts</servlet-name>
-        <url-pattern>/rest_sts/*</url-pattern>
+        <url-pattern>/rest-sts/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>rest-sts-publish</servlet-name>
-        <url-pattern>/rest_sts_publish/*</url-pattern>
+        <url-pattern>/rest-sts-publish/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>sts-tokengeneration-service</servlet-name>
-        <url-pattern>/sts_tokengen/*</url-pattern>
+        <url-pattern>/sts-tokengen/*</url-pattern>
     </servlet-mapping>
 
     <!-- end of servlet mapping -->
