ongoing work to provide a SAML2 TokenProvider implementation which consumes the TokenGenerationService.
git-svn-id: https://svn.forgerock.org/openam/branches/soap_sts_tgs@9667 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-sts/openam-soap-sts/src/main/webapp/WEB-INF/web.xml
+++ b/openam-sts/openam-soap-sts/src/main/webapp/WEB-INF/web.xml
@@ -23,11 +23,11 @@
      web-services.
     -->
     <servlet>
-        <servlet-name>new_sts</servlet-name>
+        <servlet-name>soap_sts</servlet-name>
         <servlet-class>org.forgerock.openam.sts.soap.STSBroker</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>new_sts</servlet-name>
-        <url-pattern>/new_sts/*</url-pattern>
+        <servlet-name>soap_sts</servlet-name>
+        <url-pattern>/sts/*</url-pattern>
     </servlet-mapping>
 </web-app>
