interim check-in of work towards associating a ViewBean/PropertySheet with rest sts service definition
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9710 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4533,3 +4533,45 @@ configure.oauth2.label.service.scopeImpl.help=The class that contains the requir
 
 oauth2.configured.title=OAuth2 Configured for the given realm
 configuring.oauth2.waiting=Waiting on OAuth2 Configuration
+
+rest.sts.keystore.section.title=Keystore Configuration
+rest.sts.keystore.filename=Keystore Filename
+rest.sts.keystore.password=Keystore Password
+rest.sts.keystore.EncryptionKeyAlias=Encryption Key Alias
+rest.sts.keystore.EncryptionKeyPassword=Encryption Key Password
+rest.sts.keystore.SignatureKeyAlias=Signature Key Alias
+rest.sts.keystore.SignatureKeyPassword=Signature Key Password
+
+rest.sts.saml2.section.title=Issued SAML2 Token Configuration
+rest.sts.saml2.NameIdFormat=NameIdFormat
+rest.sts.saml2.TokenLifetime=Token Lifetime(seconds)
+rest.sts.saml2.CustomConditionsProviderClassName=Custom Conditions Provider Class Name (optional)
+rest.sts.saml2.CustomConditionsProviderClassName.help.txt=If the Conditions of the issued SAML2 assertion \
+  needs to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.ConditionsProvider \
+  interface, and specify the class name of the implementation here.
+rest.sts.saml2.CustomSubjectProviderClassName=Customs Subject Provider Class Name (optional)
+rest.sts.saml2.CustomSubjectProviderClassName.help.txt=If the Subject of the issued SAML2 assertion \
+  needs to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.SubjectProvider \
+  interface, and specify the class name of the implementation here.
+rest.sts.saml2.CustomAuthenticationStatementsClassName=Custom AuthenticationStatements Class Name (optional)
+rest.sts.saml2.CustomAuthenticationStatementsClassName.help.txt=If the AuthenticationStatements of the issued SAML2 assertion \
+  need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.AuthenticationStatementsProvider \
+  interface, and specify the class name of the implementation here.
+rest.sts.saml2.CustomAttributeStatementsClassName=Custom AttributeStatements Class Name (optional)
+rest.sts.saml2.CustomAttributeStatementsClassName.help.txt=If the AttributeStatements of the issued SAML2 assertion \
+  need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.AttributeStatementsProvider \
+  interface, and specify the class name of the implementation here.
+rest.sts.saml2.CustomAuthorizationDecisionStatementsClassName=Custom Authorization Decision Statements Class Name (optional)
+rest.sts.saml2.CustomAuthorizationDecisionStatementsClassName.help.txt=If the AuthorizationDecisionStatements of the issued SAML2 assertion \
+  need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.AuthzDecisionStatementsProvider \
+  interface, and specify the class name of the implementation here.
+rest.sts.saml2.CustomAttributeMapperClassName=Custom Attribute Mapper Class Name (optional)
+rest.sts.saml2.CustomAttributeMapperClassName.help.txt=If the class implementing attribute mapping for attributes \
+  contained in the issued SAML2 assertion needs to be customized, implement the \
+  org.forgerock.openam.sts.tokengeneration.saml2.statements.AttributeMapper interface, and specify the class name of \
+  the implementation here.
+rest.sts.saml2.CustomAuthenticationContextMapperClassName=Custom Authentication Context Class Name (optional)
+rest.sts.saml2.CustomAuthenticationContextMapperClassName.help.txt=If the AuthnContext mapping implemented by the \
+  org.forgerock.openam.sts.token.provider.AuthnContextMapperImpl class, implement the \
+  org.forgerock.openam.sts.token.provider.AuthnContextMapper interface, and specify the name of the implementation here.
+rest.sts.saml2.CanonicalizationAlgorithm=
