more work towards associating a ViewBean/PropertySheet with rest sts service definition
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9711 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4574,4 +4574,24 @@ rest.sts.saml2.CustomAuthenticationContextMapperClassName=Custom Authentication 
 rest.sts.saml2.CustomAuthenticationContextMapperClassName.help.txt=If the AuthnContext mapping implemented by the \
   org.forgerock.openam.sts.token.provider.AuthnContextMapperImpl class, implement the \
   org.forgerock.openam.sts.token.provider.AuthnContextMapper interface, and specify the name of the implementation here.
-rest.sts.saml2.CanonicalizationAlgorithm=
+rest.sts.saml2.CanonicalizationAlgorithm=Canonicalization Algorithm (optional)
+rest.sts.saml2.CanonicalizationExcNoComments=W3C Exclusive Canonicalization without Comments
+rest.sts.saml2.CanonicalizationExcWithComments=W3C Exclusive Canonicalization with Comments
+rest.sts.saml2.SignatureAlgorithm=Signature Algorithm (optional)
+rest.sts.saml2.SignatureAlgorithm.help.txt=If no custom algorithm is specified, either http://www.w3.org/2000/09/xmldsig#dsa-sha1 or \
+  http://www.w3.org/2000/09/xmldsig#rsa-sha1 is used, depending upon the type of the private key
+rest.sts.saml2.SignatureDsaSha1=dsa sha1
+rest.sts.saml2.SignatureRsaSha1=rsa sha1
+rest.sts.saml2.SignAssertion=Sign Assertion?
+rest.sts.saml2.Audiences=Assertion audiences
+rest.sts.saml2.Audiences.help.txt=Values will be used to populate the Audiences of the AudienceRestriction element of the Conditions \
+  element. See section 4.1.4.2 of http://docs.oasis-open.org/security/saml/v2.0/saml-profiles-2.0-os.pdf for details.
+saml2_attribute_map=Specification of mapped attributes
+rest.sts.saml2.AttributeMap=Attribute Mappings
+rest.sts.saml2.AttributeMap.help.txt=Contains the mapping of saml attribute names (Map keys) to local OpenAM attributes (Map values) in \
+  various stores. The DefaultAttributeMapper looks at profile attributes in various places: \
+  LDAP or SQL, depending on data store setup, or in Session properties. The keys will define the name of the attributes \
+  included in the Assertion Attribute statements, and the data pulled from the subject's directory entry or session state \
+  corresponding to the map value will define the value corresponding to this attribute name. If the attribute value is \
+  enclosed in quotes, that quoted value will be included in the attribute without mapping. Binary attributes should be \
+  followed by ';'.
