ongoing work wiring the ViewBean save button into the rest-sts publish service.
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9767 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-console/pom.xml
+++ b/openam-console/pom.xml
@@ -181,6 +181,10 @@
             <artifactId>OpenFM</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.easytesting</groupId>
             <artifactId>fest-assert</artifactId>
         </dependency>
