initial set of changes to have rest sts view bean context to populate its own tab.
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9816 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4534,6 +4534,14 @@ configure.oauth2.label.service.scopeImpl.help=The class that contains the requir
 oauth2.configured.title=OAuth2 Configured for the given realm
 configuring.oauth2.waiting=Waiting on OAuth2 Configuration
 
+##################################
+# Rest STS Localization Parameters #
+##################################
+
+tab.configuration.reststs.label=Rest STS
+tab.configuration.reststs.tooltip=Click to configure rest sts instances
+tab.configuration.reststs.status=Click to configure rest sts instances
+
 rest.sts.keystore.section.title=Keystore Configuration
 rest.sts.keystore.filename=Keystore Path
 rest.sts.keystore.filename.help=Provide either the full filesystem path to a filesystem resident keystore, or a \
