ongoing work on rest sts tab
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9829 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4535,13 +4535,29 @@ oauth2.configured.title=OAuth2 Configured for the given realm
 configuring.oauth2.waiting=Waiting on OAuth2 Configuration
 
 ##################################
-# Rest STS Localization Parameters #
+#Rest STS
 ##################################
 
+#values for the tab - referenced in amConsoleConfig.xml
 tab.configuration.reststs.label=Rest STS
 tab.configuration.reststs.tooltip=Click to configure rest sts instances
 tab.configuration.reststs.status=Click to configure rest sts instances
 
+
+#Properties for RestSTSHomeViewBean
+reststs.home.page.title={0} - Rest STS Instances
+reststs.home.instances.table.name=Rest STS Instances
+reststs.home.instances.table.summary=Rest STS Instances
+reststs.home.instances.table.empty.message=No published Rest STS instances
+reststs.home.instances.table.button.new=Add...
+reststs.home.instances.table.button.delete=Remove
+reststs.home.instances.table.column.name=Name
+reststs.home.instances.table.action.column.name=Action
+
+reststs.home.instance.deleted=Rest STS instance deleted
+rest.sts.home.instances.deleted=Rest STS instances deleted
+
+# Properties for the RestSecurityTokenServiceViewBean
 rest.sts.keystore.section.title=Keystore Configuration
 rest.sts.keystore.filename=Keystore Path
 rest.sts.keystore.filename.help=Provide either the full filesystem path to a filesystem resident keystore, or a \
