more work on ViewBean set required for STS tab
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9838 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4539,7 +4539,7 @@ configuring.oauth2.waiting=Waiting on OAuth2 Configuration
 ##################################
 
 #values for the tab - referenced in amConsoleConfig.xml
-tab.configuration.reststs.label=Rest STS
+tab.configuration.reststs.label=STS
 tab.configuration.reststs.tooltip=Click to configure rest sts instances
 tab.configuration.reststs.status=Click to configure rest sts instances
 
@@ -4555,7 +4555,7 @@ reststs.home.instances.table.column.name=Name
 reststs.home.instances.table.action.column.name=Action
 
 reststs.home.instance.deleted=Rest STS instance deleted
-rest.sts.home.instances.deleted=Rest STS instances deleted
+reststs.home.instances.deleted=Rest STS instances deleted
 
 # Properties for the RestSecurityTokenServiceViewBean
 rest.sts.keystore.section.title=Keystore Configuration
