a few more tweaks with ViewBean inheritance, and deletion of an un-needed class.
git-svn-id: https://svn.forgerock.org/openam/branches/rest_sts_view_bean@9839 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4570,7 +4570,7 @@ rest.sts.keystore.SignatureKeyPassword=Signature Key Password
 
 rest.sts.saml2.section.title=Issued SAML2 Token Configuration
 rest.sts.saml2.NameIdFormat=NameIdFormat
-rest.sts.saml2.TokenLifetime=Token Lifetime
+rest.sts.saml2.TokenLifetime=Token Lifetime (Seconds)
 rest.sts.saml2.CustomConditionsProviderClassName=Custom Conditions Provider Class Name (optional)
 rest.sts.saml2.CustomConditionsProviderClassName.help=If the Conditions of the issued SAML2 assertion \
   needs to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.ConditionsProvider \
